--- a/Fees.html
+++ b/Fees.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./designs/fees.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="./admin.html">
+    <link rel="stylesheet" href="./about.html">
+    <link rel="stylesheet" href="./branches.html">
     <link
       href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,300&display=swap"
       rel="stylesheet"
@@ -19,12 +22,13 @@
         <img src="images.png" alt="no pic" />
       </div>
       <div class="right">
-        <li>Home</li>
-        <li>About Us</li>
-        <li>Contact Us</li>
-        <li>Admissions</li>
-        <li>Branches</li>
-        <li>Fee Structure</li>
+        <a href="http://127.0.0.1:5501/admin.html" target="_self">Home</a>
+        <a href="http://127.0.0.1:5501/about.html" target="_self">About Us</a>
+        <a href="http://127.0.0.1:5501/admissions.html" target="_self">Admissions</a>
+        <a href="http://127.0.0.1:5501/conact-us.html" target="_self">Contact Us</a>
+        <a href="http://127.0.0.1:5501/branches.html" target="_self">Branches</a>
+        <a href="http://127.0.0.1:5501/fees.html" target="_self">Fee Structure</a>
+
       </div>
     </div>
     <div class="main">
