--- a/student-login/courses.html
+++ b/student-login/courses.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./Profile-dp.jpeg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="./fee-status.html" />
+    <link rel="stylesheet" href="./student.html" />
     <link
       href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,300&display=swap"
       rel="stylesheet"
@@ -21,12 +23,26 @@
       </div>
       <div class="main">
         <div class="left">
-          <ul>
-            <li>Profile</li>
-            <li>Fee Status</li>
-            <li>FAQ's</li>
-            <li>Courses</li>
-          </ul>
+          <a
+            href="http://127.0.0.1:5501/student-login/student.html"
+            target="_self"
+            >Profile</a
+          >
+          <a
+            href="http://127.0.0.1:5501/student-login/courses.html"
+            target="_self"
+            >Courses</a
+          >
+          <a
+            href="http://127.0.0.1:5501/student-login/student.html"
+            target="_self"
+            >FAQ's</a
+          >
+          <a
+            href="http://127.0.0.1:5501/student-login/fee-status.html"
+            target="_self"
+            >Fee Status</a
+          >
         </div>
         <div class="right">
           <div class="s-profile">
@@ -40,17 +56,17 @@
             <table class="result">
               <tr>
                 <th>Subject</th>
-                <th> Teacher </th>
-                <th> Attendence</th>
-                <th> Marks</th>
-                <th> Gpa </th>
+                <th>Teacher</th>
+                <th>Attendence</th>
+                <th>Marks</th>
+                <th>Gpa</th>
               </tr>
             </table>
             <table class="result">
               <tr>
                 <td>Maths</td>
                 <td>Sir Hashir</td>
-                <td> 95%</td>
+                <td>95%</td>
                 <td>75</td>
                 <td>3.2</td>
               </tr>
@@ -59,7 +75,7 @@
               <tr>
                 <td>English</td>
                 <td>Madam Aasia</td>
-                <td> 85%</td>
+                <td>85%</td>
                 <td>78</td>
                 <td>2.8</td>
               </tr>
@@ -68,7 +84,7 @@
               <tr>
                 <td>Science</td>
                 <td>Sir Asad</td>
-                <td> 98%</td>
+                <td>98%</td>
                 <td>90</td>
                 <td>3.8</td>
               </tr>
