--- a/student-login/fee-status.html
+++ b/student-login/fee-status.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./Profile-dp.jpeg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    
+<link rel="stylesheet" href="./courses.html">
+<link rel="stylesheet" href="./student.html">
     <link
       href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,300&display=swap"
       rel="stylesheet"
@@ -21,12 +24,10 @@
       </div>
       <div class="main">
         <div class="left">
-          <ul>
-            <li>Profile</li>
-            <li>Fee Status</li>
-            <li>FAQ'</li>
-            <li>Courses</li>
-          </ul>
+          <a href="http://127.0.0.1:5501/student-login/student.html" target="_self">Profile</a>
+            <a href="http://127.0.0.1:5501/student-login/courses.html" target="_self">Courses</a>
+            <a href="http://127.0.0.1:5501/student-login/student.html" target="_self">FAQ's</a>
+            <a href="http://127.0.0.1:5501/student-login/fee-status.html" target="_self">Fee Status</a>
         </div>
         <div class="right">
           <div class="s-profile">
