--- a/student-login/student.html
+++ b/student-login/student.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./Pre-engineering-A.jpeg">
     <link rel="stylesheet" href="./student.css" />
     <link rel="stylesheet" href="./Profile-dp.jpeg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="./fee-status.html" />
+    <link rel="stylesheet" href="./courses.html" />
+    <link rel="stylesheet" href="./student.html" />
     <link
       href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,300&display=swap"
       rel="stylesheet"
@@ -21,12 +25,26 @@
       </div>
       <div class="main">
         <div class="left">
-          <ul>
-            <li>Profile</li>
-            <li>Fee Status</li>
-            <li>FAQ's</li>
-            <li>Courses</li>
-          </ul>
+          <a
+            href="http://127.0.0.1:5501/student-login/student.html"
+            target="_self"
+            >Profile</a
+          >
+          <a
+            href="http://127.0.0.1:5501/student-login/courses.html"
+            target="_self"
+            >Courses</a
+          >
+          <a
+            href="http://127.0.0.1:5501/student-login/student.html"
+            target="_self"
+            >FAQ's</a
+          >
+          <a
+            href="http://127.0.0.1:5501/student-login/fee-status.html"
+            target="_self"
+            >Fee Status</a
+          >
         </div>
         <div class="right">
           <div class="s-profile">
@@ -44,6 +62,7 @@
                 <th>Cgpa</th>
                 <th>Cnic No.</th>
                 <th>Phone No.</th>
+                <th>Hobby</th>
               </tr>
             </table>
             <table class="result">
@@ -53,6 +72,7 @@
                 <td>2.84</td>
                 <td>37033-734xxx93x-2</td>
                 <td>+92334-5438753</td>
+                <td>Event Management</td>
               </tr>
             </table>
           </nav>
